# nn_from_scratch

./: CMakeLists.txt  LICENSE  README.md
include/: linear_algebra.hpp  network.hpp  transfer_functions.hpp
scripts/: CMakeLists.txt  main.cpp  mnist.cpp  positive_or_negative.cpp
src/: CMakeLists.txt  linear_algebra.cpp  network.cpp
